--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Unblocked Games G+ </title>
-  <meta name="description" content="Unblocked Games G+ offers a huge collection of free online Unblocked games you can play anywhere, anytime. Enjoy action, puzzle, racing, and strategy games without restrictions—no downloads or sign-ups needed. Discover your new favorite game on Unblocked Games G Plus today!">
+  <title>Unblocked Games 6x </title>
+  <meta name="description" content="Unblocked Games 6x offers a huge collection of free Unblocked games you can play anywhere, anytime. Enjoy action, puzzle, racing, and strategy games without restrictions—no downloads or sign-ups needed. Discover your new favorite Unblocked Games today!">
   <meta name="author" content="UBG Plus Team">					
   <link rel="canonical" href="https://ubg-gplus.github.io">
   <meta name="robots" content="index,follow" />
