--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Unblocked Games 6x </title>
   <meta name="description" content="Unblocked Games 6x offers a huge collection of free Unblocked games you can play anywhere, anytime. Enjoy action, puzzle, racing, and strategy games without restrictions—no downloads or sign-ups needed. Discover your new favorite Unblocked Games today!">
   <meta name="author" content="UBG Plus Team">					
-  <link rel="canonical" href="https://ubg-gplus.github.io">
+  <link rel="canonical" href="https://ubg-6x.github.io">
   <meta name="robots" content="index,follow" />
   
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -33,15 +33,7 @@ color: blanchedalmond;
 }
 </style>
 
-	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-PWQ3YQT32E"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-PWQ3YQT32E');
-</script>
 </head>
 <body id="page-top" style="background: url('images/background1.png'); background-size: cover;">
   <!-- Navigation-->
@@ -53,7 +45,7 @@ color: blanchedalmond;
         <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand js-scroll-trigger" href="/">
-        <strong>Unblocked Games G+</strong>
+        <strong>Unblocked Games 6x</strong>
       </a>
 
 
@@ -183,7 +175,7 @@ color: blanchedalmond;
 
 &nbsp; &nbsp; &nbsp; 
 <!-- Category section -->
-<h1 class="section-title">UNBLOCKED GAMES G+</h1>
+<h1 class="section-title">UNBLOCKED GAMES 6x</h1>
 <div class="row grid-container" id="new-games-section">
 
 
@@ -2264,7 +2256,7 @@ color: blanchedalmond;
 
 	<div class="footer-copyright py-4">
 		<div class="container">
-			<a href="/">Unblocked Games G Plus</a>			<span class="dsb-panel">
+			<a href="/">Unblocked Games</a>			<span class="dsb-panel">
 <a href="/dmca.html">DMCA</a>&nbsp;	</div>
 	</div>
 	
