--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@ color: blanchedalmond;
 }
 </style>
 
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2B546LMVJF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2B546LMVJF');
+</script>
+
 
 </head>
 <body id="page-top" style="background: url('images/background1.png'); background-size: cover;">
